# tink

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
cmake/: load_3rdparty.cmake  messagecolor.cmake  utils.cmake
demo_game/: CMakeLists.txt  main.cpp
demo_game/api/: move.cpp  move.h  world_chat.cpp  world_chat.h
demo_game/etc/: config.json
demo_game/logic/: aoi.cpp  aoi.h  grid.cpp  grid.h  msg_type.h  player.cpp  player.h  util.cpp  util.h  world_manager.cpp  world_manager.h
demo_game/protobuf/: CMakeLists.txt  msg.pb.cc  msg.pb.h  msg.proto
etc/: config.json  config.json.example  config_harbor.json  log.conf
example/: CMakeLists.txt  client.cpp  coroutine.cpp
protobuf/: CMakeLists.txt  pbtest.pb.cc  pbtest.pb.h  pbtest.proto
service/: CMakeLists.txt  data_buffer.cpp  data_buffer.h  harbor_message.h  service_async.cpp  service_async.h  service_clua.cpp  service_dummy.cpp  service_dummy.h  service_gate.cpp  service_gate.h  service_harbor.cpp  service_harbor.h  service_master.cpp  service_master.h
src/: CMakeLists.txt  common.h  error_code.h  main.cpp  tink.h  type.h  version.h
src/base/: base_module.h  buffer.h  config.cpp  config.h  config_mng.cpp  config_mng.h  context.cpp  context.h  context_manage.cpp  context_manage.h  copyable.h  count_down_latch.cpp  count_down_latch.h  daemon.cpp  daemon.h  expected.cpp  expected.h  global_mng.cpp  global_mng.h  global_mq.cpp  global_mq.h  handle_manage.cpp  handle_manage.h  handle_manager.cpp  handle_manager.h  handle_storage.cpp  handle_storage.h  leaked_object_detector.h  lua_env.cpp  lua_env.h  memery.cpp  message_queue.cpp  message_queue.h  module_manage.cpp  module_manage.h  module_manager.cpp  module_manager.h  noncopyable.h  noncopyadble.h  pool_set.h  (+7 more)
src/interface/: iconn_manager.h  iconnection.h  idatapack.h  imessage.h  imessage_handler.h  imsg_handle.h  imsg_handler.h  interface_conn.h  interface_server.h  irequest.h  irouter.h  iserver.h  singleton.h
src/net/: base_router.cpp  base_router.h  conn_manager.cpp  conn_manager.h  connection.cpp  connection.h  datapack.cpp  datapack.h  epoller.cpp  epoller.h  harbor.cpp  harbor.h  message.cpp  message.h  message_handler.cpp  message_handler.h  monitor.cpp  monitor.h  msg_handler.cpp  msg_handler.h  poller.cpp  poller.h  request.cpp  request.h  server.cpp  server.h  sock_address.cpp  sock_address.h  socket.cpp  socket.h  socket_api.cpp  socket_api.h  socket_server.cpp  socket_server.h  timer.cpp  timer.h  timer_manager.cpp  timer_manager.h
src/service/: data_buffer.cpp  data_buffer.h  service_gate.cpp  service_gate.h
src/utils/: global.cpp  global.h  global_mng.cpp  global_mng.h  leaked_object_detector.h  message_queue.h
test/: CMakeLists.txt  aoi_test.cpp  datapack_test.cpp
