set(BINARY ${CMAKE_PROJECT_NAME}_app)

file(GLOB_RECURSE APP_SOURCES LIST_DIRECTORIES false *.h *.cpp)

set(SOURCES ${APP_SOURCES})

#add_test(NAME ${BINARY} COMMAND ${BINARY})
add_executable(${BINARY} ${APP_SOURCES})
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -fexec-charset=GBK")
target_link_libraries(${BINARY} PUBLIC ${CMAKE_PROJECT_NAME}_lib)


#set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../bin)
#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/../bin)
SET(EXECUTABLE_OUTPUT_PATH  ${PROJECT_SOURCE_DIR}/bin)
